Better registration method with activation link

--- a/PinBoard/templates/register.html.twig
+++ b/PinBoard/templates/register.html.twig
@@ -4,23 +4,37 @@
             <div class="content-header">
                 <div>Header</div>
             </div>
-            {{ form_start(form) }}
+            {#{{ form_start(form) }}#}
             <div class="content-content">
                 <div class="register-form">
+                    {% if username is not defined %}
                     <div class="username" onkeyup="checkEmail()">
-                        Username : {{ form_widget(form.username) }}
+                        Email : {{ form_widget(form.username) }}
+                    </div>
+                    {% endif %}
+                    {% if username is defined %}
+                    <div class="username" onkeyup="checkEmail()">
+                        Email : {{ form_widget(form.username, { 'attr': { 'readonly': 'true', 'value': username } }) }}
                     </div>
                     <div class="password" onkeyup="checkPassword()">
                         Password : {{ form_widget(form.password) }}
                     </div>
+                    {% endif %}
                 </div>
             </div>
             <div class="content-button">
-                <div class="button">
-                    <span onClick="registerUser()"> {{ form_widget(form.submit)}} </span>
-                </div>
+                {% if username is not defined %}
+                    <div class="button">
+                        <span onClick="sendRegistrationMail()"> {{ form_widget(form.submit)}} </span>
+                    </div>
+                {% endif %}
+                {% if username is defined %}
+                    <div class="button">
+                        <span onClick="registerUser()"> {{ form_widget(form.submit)}} </span>
+                    </div>
+                {% endif %}
             </div>
-            {{ form_end(form) }}
+            {#{{ form_end(form) }}#}
         </div>
     {% endblock content%}
     {% block javascripts %}
@@ -41,13 +55,13 @@
                         success: function(response) {
                             if(response == 1) {
                                 usernameValid = 1;
-                                activateButton();
+                                activateButtonEmail();
                                 if($('.username .emailError')) {
                                     $('.username .emailError').remove();
                                 }
                             } else if(response == 0) {
                                 usernameValid = 0;
-                                activateButton();
+                                activateButtonEmail();
                                 const message = '<div class="emailError">This email is registered. <a href="#">May you reset password?</a></div>';
                                 if($('.username .emailError').length == 0) {
                                     $('.username').append(message);
@@ -62,19 +76,44 @@
                 const password = $('#form_password').val();
                 if(password.length > 7) {
                     passwordValid = 1;
-                    activateButton();
+                    activateButtonPassword();
                 } else if(password.length < 7){
                     passwordValid = 0;
-                    activateButton();
+                    activateButtonPassword();
                 }
             };
 
-            const activateButton = () => {
+            const activateButtonEmail = () => {
+                if(usernameValid) {
+                    $("#form_submit").attr("disabled", false);
+                } else if (!usernameValid){
+                    $("#form_submit").attr("disabled", true);
+                }
+            };
+
+            const activateButtonPassword = () => {
+                const usernameValid = 1;
                 if(usernameValid && passwordValid) {
                     $("#form_submit").attr("disabled", false);
                 } else if (!usernameValid || !passwordValid){
                     $("#form_submit").attr("disabled", true);
                 }
+            };
+
+            const sendRegistrationMail = () => {
+                const username = $('#form_username').val();
+                $.ajax({
+                    url: "/sendRegisterMail",
+                    type: "post",
+                    data: { username : username },
+                    success: function(response) {
+                        if(response == 1) {
+                            window.location.href = '/';
+                        } else if(response == 0) {
+                            alert('Error. Please contact us');
+                        }
+                    }
+                })
             };
 
             const registerUser = () => {
