--- a/PinBoard/templates/login.html.twig
+++ b/PinBoard/templates/login.html.twig
@@ -7,10 +7,10 @@
             {{ form_start(form) }}
             <div class="content-content">
                 <div class="register-form">
-                    <div class="username" onkeyup="">
-                        Username : {{ form_widget(form.username) }}
+                    <div class="username">
+                        Email : {{ form_widget(form.username) }}
                     </div>
-                    <div class="password" onkeyup="">
+                    <div class="password">
                         Password : {{ form_widget(form.password) }}
                     </div>
                 </div>
@@ -30,11 +30,16 @@
                 const username = $('#form_username').val();
                 const password = $('#form_password').val();
                 $.ajax({
-                    url: "/login",
+                    url: "/loginUser",
                     type: "post",
                     data : { username : username, password : password},
                     success: function(response) {
-                        console.log('111');
+                        if(response == 1) {
+                            window.location.href = '/';
+                        }
+                        if(response == 2) {
+                            window.location.href = '/admin';
+                        }
                     }
                 })
             }
@@ -44,6 +49,47 @@
                     loginUser();
                 }
             });
+
+            let usernameValid = 0;
+            let passwordValid = 0;
+
+            const checkEmail = () => {
+                const username = $('#form_username').val();
+                const regexEmail = /[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?/;
+                const checkRegexEmail = () => regexEmail.test(username);
+                if(checkRegexEmail(username)) {
+                    activateButtonEmail();
+                }
+            };
+
+            const checkPassword = () => {
+                const password = $('#form_password').val();
+                if(password.length > 7) {
+                    passwordValid = 1;
+                    activateButtonPassword();
+                } else if(password.length < 7){
+                    passwordValid = 0;
+                    activateButtonPassword();
+                }
+            };
+
+            const activateButtonEmail = () => {
+                if(usernameValid) {
+                    $("#form_submit").attr("disabled", false);
+                } else if (!usernameValid){
+                    $("#form_submit").attr("disabled", true);
+                }
+            };
+
+            const activateButtonPassword = () => {
+                const usernameValid = 1;
+                if(usernameValid && passwordValid) {
+                    $("#form_submit").attr("disabled", false);
+                } else if (!usernameValid || !passwordValid){
+                    $("#form_submit").attr("disabled", true);
+                }
+            };
+
         </script>
     {% endblock javascripts %}
 
