--- a/PinBoard/templates/service/footer.html.twig
+++ b/PinBoard/templates/service/footer.html.twig
@@ -3,6 +3,10 @@
         <div class="footer-header">
             <div>Footer</div>
             <button onclick="logoutUser()">Logout</button>
+            <a href="/register"<button>Register</button>
+            <a href="/login"<button>Login</button>
+            <a href="/admin"<button>Admin</button>
+            <a href="/"<button>Home</button>
         </div>
         <div class="footer-content"></div>
     </div>
