--- a/PinBoard/templates/service/footer.html.twig
+++ b/PinBoard/templates/service/footer.html.twig
@@ -6,6 +6,7 @@
             <a href="/register"<button>Register</button>
             <a href="/login"<button>Login</button>
             <a href="/admin"<button>Admin</button>
+            <a href="/panel"<button>Panel</button>
             <a href="/"<button>Home</button>
         </div>
         <div class="footer-content"></div>
