--- a/PinBoard/templates/base.html.twig
+++ b/PinBoard/templates/base.html.twig
@@ -6,7 +6,7 @@
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('build/app.css') }}">
             {#<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">#}
-            <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+            {#<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">#}
         {% endblock %}
     </head>
 
