--- a/PinBoard/templates/service/panel/panel.html.twig
+++ b/PinBoard/templates/service/panel/panel.html.twig
@@ -3,8 +3,7 @@
     <div class="content">
         {% include '/service/header.html.twig' %}
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/horsey/4.2.2/horsey.min.css">
-
-
+        <script src="{{ asset('build/admin_panel.js') }}"></script>
         {% if admin is defined %}
             <div>
                 <div class="">Nowa nazwa pracy:
@@ -55,210 +54,5 @@
     </div>
     {% endblock content%}
     {% block javascripts %}
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/horsey/4.2.2/horsey.min.js"></script>
-        <script>
-
-            let searchJobsEnCounter = 0;
-            let searchJobsPlCounter = 0;
-            let searchJobsFrCounter = 0;
-            let searchCountriesEnCounter = 0;
-            let searchCountriesPlCounter = 0;
-            let searchCountriesFrCounter = 0;
-            let searchAreaInCountryCounter = 0;
-
-            const addNewJobName = () => {
-                const new_job_en = $("#new_job_en").val();
-                const new_job_pl = $("#new_job_pl").val();
-                const new_job_fr = $("#new_job_fr").val();
-                $.ajax({
-                    url: "/addNewJobName",
-                    type: "post",
-                    data: { new_job_en : new_job_en, new_job_pl : new_job_pl, new_job_fr : new_job_fr },
-                    success: function(response) {
-                        console.log('ok');
-                    }
-                })
-            };
-
-            const addNewCountryName = () => {
-                const new_country_en = $("#new_country_en").val();
-                const new_country_pl = $("#new_country_pl").val();
-                const new_country_fr = $("#new_country_fr").val();
-                $.ajax({
-                    url: "/addNewCountryName",
-                    type: "post",
-                    data: { new_country_en : new_country_en, new_country_pl : new_country_pl, new_country_fr : new_country_fr },
-                    success: function(response) {
-                        console.log('ok');
-                    }
-                })
-            };
-
-            const searchJobsEn = () => {
-                let jobLength = $("#new_job_en").val().length;
-                if(jobLength > 1 && searchJobsEnCounter == 0) {
-                    searchJobsEnAjax();
-                }
-            };
-
-            const searchJobsPl = () => {
-                let jobLength = $("#new_job_pl").val().length;
-                if(jobLength > 1 && searchJobsPlCounter == 0) {
-                    searchJobsPlAjax();
-                }
-            };
-
-            const searchJobsFr = () => {
-                let jobLength = $("#new_job_fr").val().length;
-                if(jobLength > 1 && searchJobsFrCounter == 0) {
-                    searchJobsFrAjax();
-                }
-            };
-
-            const searchCountriesEn = () => {
-                let countryLength = $("#new_country_en").val().length;
-                if(countryLength > 1 && searchCountriesEnCounter == 0) {
-                    searchCountriesEnAjax();
-                }
-            };
-
-            const searchCountriesPl = () => {
-                let countryLength = $("#new_country_pl").val().length;
-                if(countryLength > 1 && searchCountriesPlCounter == 0) {
-                    searchCountriesPlAjax();
-                }
-            };
-
-            const searchCountriesFr = () => {
-                let countryLength = $("#new_country_fr").val().length;
-                if(countryLength > 1 && searchCountriesFrCounter == 0) {
-                    searchCountriesFrAjax();
-                }
-            };
-
-            const searchAreaInCountry = () => {
-                let areaLength = $("#new_area").val().length;
-                if(areaLength > 1 && searchAreaInCountryCounter == 0) {
-                    searchAreaInCountryAjax();
-                }
-            }
-
-            function searchJobsEnAjax() {
-                $.ajax({
-                    url: "/searchJobs/en",
-                    type: "post",
-                    success: function(response) {
-                        horsey(document.getElementById('new_job_en'), {
-                            source: [{ list: response }]
-                        });
-                        searchJobsEnCounter += 1;
-                    }
-                });
-            }
-
-            function searchJobsPlAjax() {
-                $.ajax({
-                    url: "/searchJobs/pl",
-                    type: "post",
-                    success: function(response) {
-                        horsey(document.getElementById('new_job_pl'), {
-                            source: [{ list: response }]
-                        });
-                        searchJobsPlCounter += 1;
-                    }
-                });
-            }
-
-            function searchJobsFrAjax() {
-                $.ajax({
-                    url: "/searchJobs/fr",
-                    type: "post",
-                    success: function(response) {
-                        horsey(document.getElementById('new_job_fr'), {
-                            source: [{ list: response }]
-                        });
-                        searchJobsFrCounter += 1;
-                    }
-                });
-            }
-
-            function searchCountriesEnAjax() {
-                $.ajax({
-                    url: "/searchCountries/en",
-                    type: "post",
-                    success: function(response) {
-                        horsey(document.getElementById('new_country_en'), {
-                           source: [{ list : response }]
-                        });
-                        searchCountriesEnCounter += 1;
-                    }
-                });
-            }
-
-            function searchCountriesPlAjax() {
-                $.ajax({
-                    url: "/searchCountries/pl",
-                    type: "post",
-                    success: function(response) {
-                        horsey(document.getElementById('new_country_pl'), {
-                            source: [{ list : response }]
-                        });
-                        searchCountriesPlCounter += 1;
-                    }
-                });
-            }
-
-            function searchCountriesFrAjax() {
-                $.ajax({
-                    url: "/searchCountries/fr",
-                    type: "post",
-                    success: function(response) {
-                        horsey(document.getElementById('new_country_fr'), {
-                            source: [{ list : response }]
-                        });
-                        searchCountriesFrCounter += 1;
-                    }
-                });
-            }
-
-            const searchAreaInCountryAjax = () => {
-                const country = $("#select_country option:selected").text();
-                $.ajax({
-                    url: "/searchAreaInCountry",
-                    type: "post",
-                    data: { country : country },
-                    success: function (response)  {
-                        horsey(document.getElementById('new_area'), {
-                            source: [{ list : response }]
-                        });
-                        searchAreaInCountryCounter += 1;
-                    }
-                })
-            }
-
-            const resetSearchAreaInCountryCounter = () => {
-                return searchAreaInCountryCounter = 0;
-            }
-
-//        const addTask = () => {
-//            const job = $("#new_job").val();
-//            const country = $("#new_country").val();
-//            const area = $("#new_area").val();
-//            const city = $("#new_city").val();
-//            $.ajax({
-//                url: "/addTask",
-//                type: "post",
-//                data : { job : job, country : country, area : area, city : city },
-//                success: function(response) {
-//                    if(response == 1) {
-//                        console.log('success');
-//                    }
-//                    if(response == 0) {
-//                        console.log('error');
-//                    }
-//                }
-//            })
-//        }
-    </script>
     {% endblock javascripts %}
