--- a/PinBoard/templates/service/footer.html.twig
+++ b/PinBoard/templates/service/footer.html.twig
@@ -1,3 +1,4 @@
+<script src="{{ asset('build/footer.js') }}"></script>
 {% block footer %}
     <div class="footer">
         <div class="footer-header">
@@ -13,17 +14,5 @@
     </div>
 {% endblock footer %}
 <script>
-    const logoutUser = () => {
-        $.ajax({
-            url: "/logoutUser",
-            type: "post",
-            success: function(response) {
-                if(response == 1) {
-                    window.location.href = '/';
-                } else if(response == 0) {
-                    alert('Error.');
-                }
-            }
-        })
-    }
+
 </script>
