--- a/PinBoard/templates/service/panel/panel.html.twig
+++ b/PinBoard/templates/service/panel/panel.html.twig
@@ -66,7 +66,7 @@
                             </div>
                         </div>
                     </div>
-                    Dostępność od<input type="date">
+                    Dostępność od<input id="select_date" type="date">
                     <button onclick="addTask()" type="submit">Dodaj</button>
                 </div>
             </div>
