--- a/PinBoard/assets/css/app.scss
+++ b/PinBoard/assets/css/app.scss
@@ -118,3 +118,6 @@ body .page .content .inputDisabled {
   opacity: $input-disabled-opacity;
 }
 
+body .page .content .admin_tab_1 {
+  background: pink;
+}
