--- a/PinBoard/templates/service/panel/panel.html.twig
+++ b/PinBoard/templates/service/panel/panel.html.twig
@@ -6,7 +6,7 @@
             <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/horsey/4.2.2/horsey.min.css">
             <script src="https://cdnjs.cloudflare.com/ajax/libs/horsey/4.2.2/horsey.min.js"></script>
             <script src="{{ asset('build/admin_panel.js') }}"></script>
-            <div>
+            <div class="admin_tab_1">
                 <div class="">Nowa nazwa pracy:
                     EN<input onkeyup="searchJobsEn()" id="new_job_en" type="text">
                     PL<input onkeyup="searchJobsPl()" id="new_job_pl" type="text">
